fixed footer sizing on mobile. more small changes to sponsors.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,6 +36,7 @@ nav div ul li {
 footer {
 	display: flex;
 	justify-content: center;
+	max-width: 100%;
 }
 
 footer a {
@@ -43,9 +44,10 @@ footer a {
 }
 
 footer h3 {
-	display: inline-block;
 	color: #FF731B;
 	margin: auto 0.5em;
+	font-size: 3vh;
+	white-space: nowrap;
 }
 
 .lightorange-color {
